--- a/sim1/gestion/templates/gestion/stock.html
+++ b/sim1/gestion/templates/gestion/stock.html
@@ -62,7 +62,7 @@
     
     <input type="submit"  class="btn btn-primary right mt-3" value="Recherche" >
     <a href="{% url 'stock' %}"  class="btn btn-primary right mt-3"  >tout voir</a>
-    <a href="{% url 'gestionH' %}" class="btn btn-danger right mt-3" >retour</a>
+    <a href="{% url 'stats' %}" class="btn btn-danger right mt-3" >retour</a>
 </form>
       <h4 class="fw-bold py-3 mb-1"><span class="text-muted fw-light">Stock /</span>Quantité ({{taille}})</h4>
       
