--- a/sim1/supervisor/templates/supervisor/acces.html
+++ b/sim1/supervisor/templates/supervisor/acces.html
@@ -1,4 +1,4 @@
-{% extends 'gestion/index.html' %}
+{% extends 'Supervisor/index.html' %}
 
 {% block content %}
 
@@ -87,7 +87,7 @@
                   <div class="row justify-content mt-4">
                     <div class="text-center ">
                     
-                      <a href="{% url 'stats' %}" class=" btn btn-danger"> Retour</a>
+                      <a href="{% url 'gestionH' %}" class=" btn btn-danger"> Retour</a>
                     </div>
                   </div>
                 </form>
