--- a/sim1/vente/templates/vente/ajout_vente.html
+++ b/sim1/vente/templates/vente/ajout_vente.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 
-
-<h1 class="text-center mt-2">Enregistrer une nouvelle vente</h1>
+<div class="content-wrapper mt-4">
+  <div class="container-xxl flex-grow-1 container-p-y">
+<h1 class="text-center text-primary mt-2">Nouvelle vente</h1>
 <div class= "text-center"> 
          <!-- Basic Layout -->
         <div class="row">
@@ -96,5 +97,7 @@
     </form>
 </div>
 
+</div>
+</div>
 
 {% endblock %}
