--- a/sim1/vente/templates/vente/clients.html
+++ b/sim1/vente/templates/vente/clients.html
@@ -75,7 +75,7 @@
               </div>
       
       <input type="submit"  class="btn btn-primary right mt-3" value="Recherche" >
-      <a href="{% url 'vente_home' %}" class="btn btn-danger right mt-3" >retour</a>
+      <a href="{% url 'vente_stats' %}" class="btn btn-danger right mt-3" >retour</a>
   </form>
   
 
