--- a/sim1/gestion/templates/gestion/archive.html
+++ b/sim1/gestion/templates/gestion/archive.html
@@ -2,10 +2,9 @@
 {% block content %}
 <div class="content-wrapper">
   
-  <!-- Content -->
+    <!-- Content -->
 
-  <div class="container-xxl flex-grow-1 container-p-y">
-
+    <div class="container-xxl flex-grow-1 container-p-y">
 <div class= "text-center">
     
       
@@ -17,18 +16,18 @@
          <div class="col-xxl">
             <div class="card mb-4">
               <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0">Supprimer</h5>
+                <h5 class="mb-0">Archive</h5>
                 
               </div>
               <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
                     <div class="row mb-3">
-                        <label class="text-center col-form-label" for="basic-default-name">Etes vous sur de vouloir suprimer le produit <b> "{{produits.nom_produit}}"</b> </label>
+                        <label class="text-center col-form-label" for="basic-default-name">Etes vous sur de vouloir d'archiver le produit <b> "{{produits.nom_produit}}"</b> </label>
                       </div>          
                   <div class="row justify-content">
                     <div class=" text-center">
-                      <button type="submit" class="btn btn-danger">supprimer</button>
+                      <button type="submit" class="btn btn-danger">Archiver</button>
                       <a href="{% url 'ges_produit' %}" class=" btn btn-primary"> Retour</a>
                     </div>
                   </div>
@@ -40,9 +39,9 @@
         <div class="col-md-2"></div>
 </div>
 
+
 </div>
 </div>
 </div>
 
-</div>
 {% endblock %}
