--- a/sim1/gestion/templates/gestion/archive_page.html
+++ b/sim1/gestion/templates/gestion/archive_page.html
@@ -7,7 +7,7 @@
     <!-- Content -->
 
     <div class="container-xxl flex-grow-1 container-p-y">
-      <h3 class="col-sm-10  fw-bold" for="basic-default-email">Rechercher un produit</h3>
+      <h3 class="col-sm-10  fw-bold" for="basic-default-email">Rechercher un produit archivé</h3>
     
       <form class="fw-bold py-3 mb-1" method="post">
         {% csrf_token %}
@@ -58,16 +58,16 @@
             </div>
     
     <input type="submit"  class="btn btn-primary right mt-3" value="Recherche" >
-    <a href="{% url 'ges_produit' %}"  class="btn btn-primary right mt-3"  >tout voir</a>
+    {% if produits %}
+    <a href="{% url 'archive_page' %}"  class="btn btn-primary right mt-3"  >tout voir</a>
+    {% endif %}
     <a href="{% url 'stats' %}" class="btn btn-danger right mt-3" >retour</a>
 </form>
+{% if produits %}
 
-      <h4 class="fw-bold py-3 mb-1"><span class="text-muted fw-light">Stock /</span> Produit {% if taille %} ({{taille}}) {% endif%}</h4>
-      <a href="{% url 'ajout_produit' %}" class="btn btn-primary right" >ajouter un produit</a>
-      {% if produits %}  
-      <a href="{% url 'export_data_csv'  %}" class="btn btn-info right" ><i class="bx bx-download"></i> csv</a>
-      <a href="{% url 'export_data_excel'  %}" class="btn btn-success right" ><i class="bx bx-download"></i> excel</a>
-      {% endif %}
+      <h4 class="fw-bold py-3 mb-1"><span class="text-muted fw-light">Stock /</span> Produit archivé {% if taille %} ({{taille}}) {% endif%}</h4>
+
+    
 
 <div class="card text-center mt-3">
 
@@ -98,18 +98,12 @@
             <td>
               <div class="dropdown">
                 <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                  <i class="bx bx-dots-vertical-rounded"></i>
+                  
                 </button>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="{% url 'modif_produit' produit.id_produit  %}"
-                    ><i class="bx bx-edit-alt me-1"></i> Modifier</a
-                  >
-                  <a class="dropdown-item" href="{% url 'sup_produit' produit.id_produit  %}"
-                    ><i class="bx bx-trash me-1"></i> Supprimer</a
-                  >
-                  <a class="dropdown-item" href="{% url 'archive_prod' produit.id_produit  %}"
-                    ><i class="bx bx-archive-in me-1"></i> Archiver</a
-                  >
+              
+                 
+                  <a class="btn btn-success" href="{% url 'desarchive_prod' produit.id_produit  %}"
+                    ><i class="bx bx-archive-out me-1"></i> Desarchiver</a>
                 </div>
               </div>
             </td>
@@ -120,6 +114,10 @@
         </tbody>
       </table>
     </div>
+
+    {% else %}
+    <h4 class="text-primary mt-5">pas de produit archivé</h4>
+    {% endif %}
   </div>
   </div>
   </div>
