--- a/sim1/gestion/templates/gestion/index.html
+++ b/sim1/gestion/templates/gestion/index.html
@@ -27,12 +27,12 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>App CAMARA</title>
+    <title>Camso Corps</title>
 
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{ static 'assets/img/favicon/favicon.ico'}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon/favicon.ico'%}" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -73,7 +73,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
           <div class="app-brand demo">
-            <a href="{% url 'home' %}" class="app-brand-link">
+            <a href="#" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                   width="25"
@@ -142,7 +142,7 @@
           <ul class="menu-inner py-1">
             <!-- Dashboard -->
             <li class="menu-item active">
-              <a href="{% url 'gestionH' %}" class="menu-link">
+              <a href="{% url 'stats' %}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-checkbox-checked"></i>
               
                 <div data-i18n="Analytics">Gestion <small>({{ user.username}})</small></div>
@@ -162,7 +162,7 @@
               <ul class="menu-sub">
                 <li class="menu-item">
                   <a href="{% url 'acces_gestion' %}" class="menu-link" >
-                    <div data-i18n="Basic">Mes accès</div>
+                    <div data-i18n="Basic">Info compte</div>
                   </a>
                 </li>
                 <li class="menu-item">
@@ -216,6 +216,12 @@
               </a>
             </li>
 
+            <li class="menu-item">
+              <a href="{% url 'archive_page' %}" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-archive"></i>
+                <div data-i18n="Tables">Archive</div>
+              </a>
+            </li>
             
 
 
