--- a/sim1/supervisor/templates/supervisor/dashboard.html
+++ b/sim1/supervisor/templates/supervisor/dashboard.html
@@ -111,7 +111,7 @@
               </div>
               
                <div class="mt-5"></div>
-              <div class="text-center fw-semibold pt-3 mb-2"><h2 style="color: #D9042B;">Chiffre d'affaire</h2> </div>
+              <div class="text-center fw-semibold  pt-3 mb-2"><h2 class="text-primary" >Chiffre d'affaire</h2> </div>
 
               <div class="d-flex px-xxl-4 px-lg-2 p-4 gap-xxl-3 gap-lg-1 gap-3 justify-content-between">
                 <div class="d-flex">
@@ -497,6 +497,7 @@
   // lineplot
 
 
+ 
   const donnee_temps = {
     labels: [ 'janvier', 'fevrier','Mars','avril','Mai','juin',"juillet","aout","septembre","octobre","novembre","decembre"],
     datasets: [{
