--- a/sim1/vente/templates/vente/acces.html
+++ b/sim1/vente/templates/vente/acces.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<div class="content-wrapper">
+  <!-- Content -->
+
+<div class="container-xxl flex-grow-1 container-p-y">
 <div class= "text-center mt-3">
    
      
@@ -67,7 +71,7 @@
                   <div class="row justify-content mt-4">
                     <div class="text-center ">
                     
-                      <a href="{% url 'gestionH' %}" class=" btn btn-danger"> Retour</a>
+                      <a href="{% url 'vente_stats' %}" class=" btn btn-danger"> Retour</a>
                       <a href="{% url 'oublie_vente' %}" class=" btn btn-primary"> Modifier mon mot de pass</a>
                     </div>
                   </div>
@@ -84,6 +88,7 @@
 
  
 </div>
-
+</div>
+</div>
 
 {% endblock %}
