--- a/sim1/vente/templates/vente/historique.html
+++ b/sim1/vente/templates/vente/historique.html
@@ -26,7 +26,7 @@
                 </div>
         
         <input type="submit"  class="btn btn-primary right mt-3" value="voir les Ventes" >
-        <a href="#" class="btn btn-danger right mt-3" >retour</a>
+        <a href="{% url 'vente_stats' %}" class="btn btn-danger right mt-3" >retour</a>
     </form>
    
     
