--- a/sim1/vente/templates/vente/index.html
+++ b/sim1/vente/templates/vente/index.html
@@ -73,7 +73,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
           <div class="app-brand demo">
-            <a href="{% url 'home' %}" class="app-brand-link">
+            <a href="#" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                   width="25"
@@ -142,7 +142,7 @@
           <ul class="menu-inner py-1">
             <!-- Dashboard -->
             <li class="menu-item active">
-              <a href="{% url 'vente_home' %}" class="menu-link">
+              <a href="{% url 'vente_stats' %}" class="menu-link">
                 <i class="menu-icon tf-icons bx bxs-shopping-bags"></i>
                 
                 <div data-i18n="Analytics">Vente <small>({{user.username}})</small></div>
@@ -160,7 +160,7 @@
               <ul class="menu-sub">
                 <li class="menu-item">
                   <a href="{% url 'acces_vente' %}" class="menu-link">
-                    <div data-i18n="Basic">Mes accès</div>
+                    <div data-i18n="Basic">Info compte</div>
                   </a>
                 </li>
                 <li class="menu-item">
