--- a/sim1/vente/templates/vente/stats.html
+++ b/sim1/vente/templates/vente/stats.html
@@ -26,7 +26,7 @@
             <div class="card">
               <div class="card-body">
                 
-                <span class="fw-semibold d-block mb-1">Top produit</span>
+                <span class="fw-semibold text-primary d-block mb-1">Top produit</span>
                 <h5 class="card-title mb-2">
                   {% for produit in top_produits %}
 
@@ -42,7 +42,7 @@
             <div class="card">
               <div class="card-body">
                
-                <span class="fw-semibold">Mes ventes(jour)</span>
+                <span class="fw-semibold text-primary">Mes ventes(jour)</span>
                 <h3 class="card-title   text-nowrap mb-1">{{ventes}}</h3>
                 {% if haut_bas_jour > 0 %}
                 <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +{{haut_bas_jour}}%</small>
@@ -61,7 +61,7 @@
         <div class="card">
           <div class="row row-bordered g-0">
             <div class="col-md-8">
-              <h5 class="card-header text-info m-0 me-2 pb-3">Mon Top classement</h5>
+              <h5 class="card-header text-primary m-0 me-2 pb-3">Mon Top classement</h5>
               <!-- <div id="totalRevenueChart" class="px-2"></div> -->
               <div class="row">
                 <div class="col-md-2"></div>
@@ -93,24 +93,21 @@
                 <div class="text-center">
                   <div class="dropdown">
                     <button
-                      class="btn btn-sm btn-outline-primary dropdown-toggle"
+                      class="btn btn-sm btn-outline-primary "
                       type="button"
                       id="growthReportId"
                       data-bs-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      2024
+                      {{an}}
                     </button>
-                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="growthReportId">
-                      <a class="dropdown-item" href="javascript:void(0);">2024</a>
-                      
-                    </div>
+                  
                   </div>
                 </div>
               </div>
               <!-- <div id="growthChart"></div> -->
-              <div class="text-center fw-bold text-info pt-3 mb-2">Mon profit anuel génére</div>
+              <div class="text-center fw-bold text-primary pt-3 mb-2">Mon profit anuel génére</div>
 
               <div class="d-flex px-xxl-4 px-lg-2 p-4 gap-xxl-3 gap-lg-1 gap-3 justify-content-between">
                 <div class="d-flex">
@@ -157,7 +154,7 @@
                   
                   
                 </div>
-                <span class="d-block text-info mb-1 fw-semibold">Profit total généré au cour des ventes</span>
+                <span class="d-block text-primary mb-1 fw-semibold">Profit total généré au cour des ventes</span>
                 <h3 class="card-title text-nowrap mb-2 text-primary">{{profit}} cfa</h3>
                 
               </div>
@@ -168,7 +165,7 @@
               <div class="row">
               <div class="card-body col-md-6">
                 
-                <span class="text-info d-block mb-1">Profit du jours</span>
+                <span class="text-primary d-block mb-1">Profit du jours</span>
                 <h3 class="card-title mb-2">{{profit_jour}} cfa</h3>
                 {% if haut_bas_profit > 0 %}
                 <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +{{haut_bas_profit}}%</small>
@@ -199,7 +196,7 @@
               <div class="row">
                 <div class="card-body col-md-6">
                 
-                  <span class="text-info d-block mb-1">Profit mesuel</span>
+                  <span class="text-primary d-block mb-1">Profit mesuel</span>
                   <h3 class="card-title mb-2">{{profit_mensuel}} cfa</h3>
                   {% if haut_bas_mois > 0  %}
                   <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +{{haut_bas_mois}}%</small>
@@ -264,9 +261,7 @@
 
   const mon_canvas = document.getElementById('line').getContext('2d');
     // Handle potential errors during data retrieval
-  const options = {
-    // Chart.js options here
-  };
+  
   const donne = {
     labels: [ 'lundi', 'mardi','Mercredi','jeudi','vendredi','samedi'],
     datasets: [{
@@ -279,7 +274,6 @@
   const line = new Chart(mon_canvas, {
     type: 'line', // Replace with desired chart type
     data: donne,
-    options: options,
   });
 
   
