--- a/sim1/vente/templates/vente/vente.html
+++ b/sim1/vente/templates/vente/vente.html
@@ -7,7 +7,7 @@
     <div class="container-xxl flex-grow-1 container-p-y mt-5">
       <h4 class="fw-bold py-3 mb-1"><span class="text-muted fw-light">Vente /</span> Vente(journalière)</h4>
       <a href="{% url 'ajout_vente' %}" class="btn btn-primary right" >Effectuer une vente</a>
-      <a href="{% url 'vente_home' %}" class="btn btn-danger right" >retour</a>
+      <a href="{% url 'vente_stats' %}" class="btn btn-danger right" >retour</a>
 
 <div class="card text-center mt-3">
 {% if ventes %}
@@ -51,14 +51,14 @@
       </table>
     </div>
 
-    {% else %}
-    <div class="text-center fw-bold"> Aucune vente d'effectuer</div>
-    {% endif%}
-
-  </div>
- 
+   
   </div>
  
   </div>
   
+  </div>
+  {% else %}
+    <div class="text-center fw-bold"> Aucune vente d'effectuer</div>
+    {% endif%}
+
 {% endblock %}
